--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: henriquer/kube-news:latest
+        image: henriquer/kube-news:{{TAG}}
         ports:
         - containerPort: 8080
         env:
@@ -79,5 +79,4 @@ spec:
   ports: 
     - port: 80
       targetPort: 8080
-      nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
