--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -43,7 +43,7 @@ kind: Deployment
 metadata: 
   name: web
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
       app: web
@@ -51,6 +51,10 @@ spec:
     metadata:
       labels:
         app: web
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: web
